# prometheus-tool-ai

./: .gitignore  DSPY_REACT_FINISH_TOOL_DISCUSSION.md  DSPY_REACT_FINISH_TOOL_RESEARCH.md  DSPY_RLM_INTEGRATION_ANALYSIS.md  DSPY_optimimze.md  OUTCOME_IDEAL.md  PROMETHEUS_ASSISTANT.md  PROMETHEUS_TOOLS_DETAIL.md  PROM_ACCESS_FINDINGD.md  PROM_ACCESS_VS_PROMQL_CLI.md  README.md  REPL_ANALYSIS.md  REPO_PROM_CLI_WORTH.md  RLM_Comparison.md  RecursiveLanguageModels.txt  TASK_LOG_AGENT_DSPY_RLM_PLAN_STATUS.md  TASK_WRAPPER_SPEC.md  empty_run_logs.sh  github_rlm_ref_impl_code.md  pyproject.toml  rlm_vs_react.d2
docs/: log_agent.d2  log_agent.md  log_agent_detail.md  log_agent_example.md
examples/dspy_optimize/: log_agent_placeholders_examples.py  log_agent_placeholders_optimize.py
src/: agent_log_dspy_rlm.py  agent_logging.py  code_audit_agent.py  constants.py  dspy_utils.py  fib_agent.py  log_agent.py  prom_agent.py  promwrap_tool_logging.py  pypi_agent.py  pypi_agent_run_example.md  simplest_tool_logging.py  tool_tracker.py  utils.py
src/optimize_agent/: log_agent_placeholders_examples.py  log_agent_placeholders_optimize.py
src/optimize_agent/runs_docs/: 20260114_run_33_50.md  20260114_run_33_50_final_output_variable_discussion.md  20260114_run_analysis.md  20260114_run_analysis_discussion.md
src/promwrap/: __init__.py  cli.py  client.py
src/repl/: python_tool.py  python_tool_repl.py
src/tools/: llm_tool.py  log_tools.py  prom.py
tests/: test_llm_tool.py  test_python_tool_repl.py
